Corrected Ingredient Section Visibility

--- a/App/styles.css
+++ b/App/styles.css
@@ -106,6 +106,3 @@ header {
         padding: 4px 12px;
         text-align: right;
     }
-    #inventory-section>#use-in-0-days {
-        display: none;
-    }
